modified javascript amazing1 blog answer

--- a/_posts/2014-05-12-javascript-amazing1.html
+++ b/_posts/2014-05-12-javascript-amazing1.html
@@ -106,7 +106,20 @@ console.log(a)       // 3
 fn1();               // 5 、 8
     {% endhighlight %}
 
-<p>函数fn1里面的变量a的赋值为5覆盖了外面的赋值3（但是不会改变全局变量a的值）；所以函数fn1里面打印出来的a的值是5；函数fn1外面打印出来a的值还是3；但是函数fn1里面没有给变量b赋值，所以会沿着作用域链向函数外的全局范围查找变量b的值，所以会打印出来得值为8；</p>
+    {% highlight javascript %}
+var a = 3;
+var b = 8;
+function fn1(){
+    var a = 5;
+    var b;
+    console.log(a); 
+    console.log(b);
+}
+console.log(a)       // 3
+fn1();               // 5 、 undefined
+    {% endhighlight %}
+
+<p>函数fn1里面的变量a的赋值为5覆盖了外面的赋值3（但是不会改变全局变量a的值）；所以函数fn1里面打印出来的a的值是5；函数fn1外面打印出来a的值还是3；接着执行函数fn1，函数fn1里面没有声明变量b更没有给变量b赋值，所以会沿着作用域链向函数外的全局范围查找变量b的值，所以会打印出来得值为8，但是下面第二个例子在函数fn1里面声明了变量b却没有初始化（给变量b赋值），这个时候因为在函数里面能够找到变量b，所以不会再沿着作用域链向链尾查找，但是此时变量b由于没有赋值，所以会打印出undefined；</p>
 
 
 
