add 2012 year blog date

--- a/_posts/2012-10-12-display-value.html
+++ b/_posts/2012-10-12-display-value.html
@@ -16,7 +16,7 @@ title : Display的几种状态值
 	div: {display: inline;}
 div: {display: block;}
 div: {display: inline-block;}
-div: {display: no;}
+div: {display: none;}
 div: {display: list-item;}
 div: {display: inherit;}
 	{% endhighlight %}
@@ -24,12 +24,12 @@ div: {display: inherit;}
 
 
 
-<p><strong>display: inline;</strong>inline 默认。此元素会被显示为内联元素，元素前后没有换行符。</p>
-<p><strong>display: block;</strong>block 此元素将显示为块级元素，此元素前后会带有换行符。</p>
-<p><strong>display: inline-block;</strong>inline-block 行内块元素。</p>
-<p><strong>display: no;</strong>none 此元素不会被显示。</p>
-<p><strong>display: list-item;</strong>list-item 此元素会作为列表显示。</p>
-<p><strong>display: inherit;</strong>inherit 规定应该从父元素继承 display 属性的值。</p>
+<p><strong>display: inline;</strong> —— 默认。此元素会被显示为内联元素，元素前后没有换行符。</p>
+<p><strong>display: block;</strong> —— 此元素将显示为块级元素，此元素前后会带有换行符。</p>
+<p><strong>display: inline-block;</strong> —— 行内块元素。</p>
+<p><strong>display: none;</strong> —— 此元素不会被显示。</p>
+<p><strong>display: list-item;</strong> —— 此元素会作为列表显示。</p>
+<p><strong>display: inherit;</strong> —— 规定应该从父元素继承 display 属性的值。</p>
 
 
 
