--- a/_posts/2013-11-12-javascript-design-pattern.html
+++ b/_posts/2013-11-12-javascript-design-pattern.html
@@ -1,12 +1,12 @@
 ---
 layout: default_post
-title :  代码设计模式
+title :  代码设计模式总结
 ---
 
 
 
 
-<h3>代码设计模式</h3>
+<h3>代码设计模式总结</h3>
 
 
 <p>本文主要讲述一下，什么是设计模式（Design pattern），作为敲键盘的我们要如何学习设计模式。设计模式真的是一把万能钥匙么？</p>
