add javascript feature blog content

--- a/_posts/2012-09-24-javascript-feature.html
+++ b/_posts/2012-09-24-javascript-feature.html
@@ -27,19 +27,158 @@ title : Javascript语言的“精髓”
 <p>所以，Javascript语言实际上是两种语言风格的混合产物----（简化的）函数式编程+（简化的）面向对象编程。这是由Brendan Eich（函数式编程）与网景公司（面向对象编程）共同决定的。</p>
 
 
-	{% highlight javascript %}
+<p>Javascript同时结合了函数式编程和面向对象编程的特点，这很可能是历史上的第一例。而且直到今天为止，Javascript仍然是世界上唯一使用Prototype继承模型的主要语言。</p>
 
+
+
+
+
+<h3>Javascript的一些设计缺陷</h3>
+
+<h4>不适合开发大型程序</h4>
+<p>Javascript没有名称空间（namespace），很难模块化；没有如何将代码分布在多个文件的规范；允许同名函数的重复定义，后面的定义可以覆盖前面的定义，很不利于模块化加载。</p>
+
+
+<h4>非常小的标准库</h4>
+<p>Javascript提供的标准函数库非常小，只能完成一些基本操作，很多功能都不具备。</p>
+
+
+<h4>null和undefined</h4>
+<p>null属于对象（object）的一种，意思是该对象为空；undefined则是一种数据类型，表示未定义。</p>
+
+	{% highlight javascript %}
+typeof null; // object
+typeof undefined; // undefined
+	{% endhighlight %}
+
+<p>两者非常容易混淆，但是含义完全不同。</p>
+
+	{% highlight javascript %}
+var foo;
+alert(foo == null); // true
+alert(foo == undefined); // true
+alert(foo === null); // false
+alert(foo === undefined); // true
+	{% endhighlight %}
+
+<p>在编程实践中，null几乎没用，根本不应该设计它。</p>
+
+
+
+<h4>全局变量难以控制</h4>
+<p>Javascript的全局变量，在所有模块中都是可见的；任何一个函数内部都可以生成全局变量，这大大加剧了程序的复杂性。</p>
+
+	{% highlight javascript %}
+a = 1;
+(function(){
+	b=2;
+	alert(a);
+})();          // 1
+alert(b);      // 2
+	{% endhighlight %}
+
+
+<h4>自动插入行尾分号</h4>
+<p>Javascript的所有语句，都必须以分号结尾。但是，如果你忘记加分号，解释器并不报错，而是为你自动加上分号。有时候，这会导致一些难以发现的错误。</p>
+
+
+
+
+<h4>加号运算符</h4>
+
+<p>+号作为运算符，有两个含义，可以表示数字与数字的和，也可以表示字符与字符的连接。</p>
+
+
+	{% highlight javascript %}
+alert(1+10);          // 11
+alert("1"+"10");      // 110
+	{% endhighlight %}
+
+<p>如果一个操作项是字符，另一个操作项是数字，则数字自动转化为字符。</p>
+
+	{% highlight javascript %}
+alert(1+"10");       // 110
+alert("10"+1);       // 101
+	{% endhighlight %}
+
+<p>这样的设计，不必要地加剧了运算的复杂性，完全可以另行设置一个字符连接的运算符。</p>
+
+
+<h4>NaN</h4>
+<p>NaN是一种数字，表示超出了解释器的极限。它有一些很奇怪的特性：</p>
+
+
+	{% highlight javascript %}
+NaN === NaN; //false
+NaN !== NaN; //true
+alert( 1 + NaN ); // NaN
+	{% endhighlight %}
+
+
+<p>与其设计NaN，不如解释器直接报错，反而有利于简化程序。</p>
+
+
+
+
+
+<h4>数组和对象的区分</h4>
+<p>由于Javascript的数组也属于对象（object），所以要区分一个对象到底是不是数组，相当麻烦。Douglas Crockford的代码是这样的：</p>
+
+	{% highlight javascript %}
+if ( arr &&  
+	typeof arr === 'object' &&
+	typeof arr.length === 'number' &&
+	!arr.propertyIsEnumerable('length')){
+	alert("arr is an array");
+}
 	{% endhighlight %}
 
 
 
+<h4>== 和 ===</h4>
+<p>==用来判断两个值是否相等。当两个值类型不同时，会发生自动转换，得到的结果非常不符合直觉。</p>
+
+	{% highlight javascript %}
+"" == "0"               // false
+0 == ""                 // true
+0 == "0"                // true
+false == "false"        // false
+false == "0"            // true
+false == undefined      // false
+false == null           // false
+null == undefined       // true
+" \t\r\n" == 0          // true
+	{% endhighlight %}
+
+<p>因此，推荐任何时候都使用"==="（精确判断）比较符。</p>
+
+
+
+<h4>基本类型的包装对象</h4>
+<p>Javascript有三种基本数据类型：字符串、数字和布尔值。它们都有相应的建构函数，可以生成字符串对象、数字对象和布尔值对象。</p>
+
+	{% highlight javascript %}
+new Boolean(false);
+new Number(1234);
+new String("Hello World");
+	{% endhighlight %}
+
+<p>与基本数据类型对应的对象类型，作用很小，造成的混淆却很大。</p>
+
+	{% highlight javascript %}
+alert( typeof 1234); // number
+alert( typeof new Number(1234)); // object
+	{% endhighlight %}
+
+
+<p>关于Javascript的更多怪异行为，请参见<a href="http://bonsaiden.github.io/JavaScript-Garden/zh/" target="_blank">Javascript Garden</a>和<a href="http://wtfjs.com/" target="_blank">wtfjs.com</a>。</p>
 
 
 
 
 
-
-
-
+<h3>Javascript的前景</h3>
+<p>Javascript目前是网页编程的唯一语言，只要互联网继续发展，它就必然一起发展。</p>
+<p>目前，许多新项目大大扩展了它的用途，node.js使得Javascript可以用于后端的服务器编程，coffeeScript使你可以用python和ruby的语法，撰写Javascript。</p>
 
 
