modified interview blog

--- a/_posts/2013-01-12-interview.html
+++ b/_posts/2013-01-12-interview.html
@@ -33,6 +33,7 @@ title : Web前端面试考察的一些知识点
 
 
 
+
 <h4>2.  行内元素和块元素分别有哪些？（高频率）</h4>
 <p>块级元素和行内元素的区别是，块级元素会占一行显示，而行内元素可以在一行并排显示。通过样式控制，它们可以相互转换。</p>
 <p>行内元素有以下特征：
@@ -44,6 +45,7 @@ title : Web前端面试考察的一些知识点
     </ul>
 </p>
 <p>这里说的无效， 是指，它对其它元素的排列没有影响。也就是说，对于设置的margin,padding行内元素文档流里的上下元素来说，他们的间距不会因为上下margin或者上下padding而产生间距。但是就他本身而言，对于上下margin与padding是有效的。</p>
+
 
 
 
@@ -62,10 +64,12 @@ title : Web前端面试考察的一些知识点
 
 
 
+
 <h4>4.  Doctype 是什么？有什么作用？</h4>
 <p>DOCTYPE标签是一种标准通用标记语言的文档类型声明，它的目的是要告诉标准通用标记语言解析器，它应该使用什么样的文档类型定义（DTD）来解析文档。</p>
 <p>在超文本标记语言（标准通用标记语言的一个应用）里头，就是用来说明编写网页的HTML/XHTML的标签用的是什么版本。</p>
  
+
 
 
 <h4>5.  HTML与XHTML的区别是什么？</h4>
@@ -85,6 +89,7 @@ title : Web前端面试考察的一些知识点
         <li>框架的(Frameset):专门针对框架页面设计使用的DTD，如果你的页面中包含有框架，需要采用这种DTD。完整代码如下：!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Frameset//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-frameset.dtd"</li>
     </ul>
 </p>
+
 
 
 
@@ -112,27 +117,29 @@ title : Web前端面试考察的一些知识点
 
 
 
+
 <h4>7.  Div与span的区别是什么？</h4>
 <p>两者最明显的区别在于DIV是块元素，而SPAN是行内元素(也译作内嵌元素)。SPAN 的前后是不会换行的，它没有结构的意义，纯粹是应用样式。总的来说，一个div是占一个块的，它的默认display属性是block，表示一个块。而span，它的display默认属性是inline，可以连在一起的。 </p>
 
 
 
+
 <h4>8.  Img的alt和title有啥区别？各自作用？</h4>
-<p><strong>用来指定替换文字</strong>使用alt属性是为了给那些不能看到你文档中图像的浏览者提供文字说明。这包括那些使用本来就不支持图像显示或者图像显示被关闭的浏览器的用户，视觉障碍的用户和使用屏幕阅读器的用户。替换文字是用来替代图像而不是提供额外说明文字的。
+<p><strong>alt用来指定替换文字</strong>使用alt属性是为了给那些不能看到你文档中图像的浏览者提供文字说明。这包括那些使用本来就不支持图像显示或者图像显示被关闭的浏览器的用户，视觉障碍的用户和使用屏幕阅读器的用户。替换文字是用来替代图像而不是提供额外说明文字的。
     <ul>
         <li>为不能显示图像、窗体或applets的用户代理（UA），alt属性用来指定替换文字。替换文字的语言由lang属性指定。</li>
         <li>它只能用在img、area和input元素中</li>
         <li>长度必须少于100个英文字符或者用户必须保证替换文字尽可能的短。</li>
     </ul>
 </p>
-<p><strong>提供建议性的信息</strong>使用title属性提供非本质的额外信息。title属性有一个很好的用途，即为链接添加描述性文字，特别是当连接本身并不是十分清楚的表达了链接的目的。
+<p><strong>title提供建议性的信息</strong>使用title属性提供非本质的额外信息。title属性有一个很好的用途，即为链接添加描述性文字，特别是当连接本身并不是十分清楚的表达了链接的目的。
     <ul>
         <li>为设置该属性的元素提供建议性的信息。</li>
         <li>可以用在除了base，basefont，head，html，meta，param，script和title之外的所有标签。</li>
         <li>值可以比alt属性值设置的更长。不过要注意的是，有些浏览器会截断过长的文字。比如Mozilla核心的浏览器只能显示最先的60个字符。</li>
     </ul>
 </p>
-<p>综上所述,我们可以知道,我们可以给option用title加注释,但是不能用alt加注释。在许多时候,alt的局限性很大.而title的扩展性很强.我们在互联网上经常会看到,当指针移上去时,有时显示的注释里不光有文字,还有图片,还可以换行,甚至更多!建议大家以后如果只是图片,或者是给按钮等常用的加些文字替换的话,用alt属性就够了.而是要完成更酷的特效或者是加载图片,给更多的标签加注释时,应选用title属性</p>
+<p>综上所述,我们可以知道,我们可以给option用title加注释,但是不能用alt加注释。在许多时候,alt的局限性很大.而title的扩展性很强.我们在互联网上经常会看到,当指针移上去时,有时显示的注释里不光有文字,还有图片,还可以换行,甚至更多!建议大家以后如果只是图片,或者是给按钮等常用的加些文字替换的话,用alt属性就够了.而是要完成更酷的特效或者是加载图片,给更多的标签加注释时,应选用title属性。</p>
 
 
 
@@ -140,7 +147,7 @@ title : Web前端面试考察的一些知识点
 <p>内置到HTML5中的Web存储对象有两种类型：
     <ul>
         <li>sessionStorage 对象负责存储一个会话的数据。如果用户关闭了页面或浏览器，则会销毁数据。</li>
-        <li>The localStorage 对象负责存储没有到期的数据。当Web页面或浏览器关闭时，仍会保持数据的存储，当然这还取决于为此用户的浏览器设置的存储量。</li>
+        <li>localStorage 对象负责存储没有到期的数据。当Web页面或浏览器关闭时，仍会保持数据的存储，当然这还取决于为此用户的浏览器设置的存储量。</li>
     </ul>
 </p>
 <p><strong>注：</strong>不能在浏览器之间分享Web存储, 如果您在Safari中存储了数据，那么该数据在Mozilla Firefox中是无法访问的。</p>
@@ -329,7 +336,7 @@ title : Web前端面试考察的一些知识点
         <li>fixed : 相对于窗口的定位。</li>
     </ul>
 </p>
-<p>只要元素设置了 postion : absolute | relative | fixed ， 该元素就会脱离文档流。<span class="p_info">--但是relative元素是个特例，因为该元素对然脱离了文档流，但是它原本所占的空间仍然占据文档流。</span></p>
+<p>只要元素设置了 postion : absolute | relative | fixed ， 该元素就会脱离文档流。<span class="p_info">--但是relative元素是个特例，因为该元素虽然脱离了文档流，但是它原本所占的空间仍然占据文档流。</span></p>
 <p>关于display--
     <ul>
         <li>relative : 原来是什么类型的依旧是什么类型。</li>
@@ -344,21 +351,22 @@ title : Web前端面试考察的一些知识点
 <p><strong>px的特点</strong>
     <ul>
         <li>IE无法调整那些使用px作为单位的字体大小；</li>
-        <li>px</li>
+        <li>国外的大部分网站能够调整的原因在于其使用了em或rem作为字体单位；</li>
     </ul>
 </p>
 <p><strong>rem的特点</strong>
     <ul>
         <li>em的值并不是固定的；</li>
-        <li>m会继承父级元素的字体大小。</li>
+        <li>em会继承父级元素的字体大小；</li>
     </ul>
 </p>
 <p><strong>em的特点</strong>
     <ul>
         <li>em的值并不是固定的；</li>
-        <li>m会继承父级元素的字体大小。</li>
+        <li>m会继承父级元素的字体大小；</li>
     </ul>
 </p>
+<p> 任意浏览器的默认字体高都是16px。所有未经调整的浏览器都符合: 1em=16px。那么12px=0.75em,10px=0.625em。为了简化font-size的换算，需要在css中的body选择器中声明Font-size=62.5%，这就使em值变为 16px*62.5%=10px, 这样12px=1.2em, 10px=1em, 也就是说只需要将你的原来的px数值除以10，然后换上em作为单位就行了。</p>
 
 
 
