add javascript enent function blog answer

--- a/_posts/2013-01-12-interview.html
+++ b/_posts/2013-01-12-interview.html
@@ -383,9 +383,9 @@ title : Web前端面试考察的一些知识点
 <p>在media属性里：</p>
 <p>
     <ul>
-        <li>screen 是媒体类型里的一种，CSS2.1定义了<a href="http://www.w3.org/TR/CSS2/media.html#media-types" target="_blank">10种媒体类型</a>(all、braille、embossed、handheld、print、projection、screen、speech、tty、tv、)；</li>
-        <li>and 被称为关键字，其他关键字还包括 not(排除某种设备)，only(限定某种设备)；</li>
-        <li>(min-width: 400px) 就是媒体特性，其被放置在一对圆括号中。完整的特性可以查看<a href="http://www.w3.org/TR/css3-mediaqueries/#media1" target="_blank">相关的Media features部分</a>；</li>
+        <li>screen 是媒体类型里的一种，CSS2.1定义了<a href="http://www.w3.org/TR/CSS2/media.html#media-types" target="_blank">10种媒体类型</a>（all、braille、embossed、handheld、print、projection、screen、speech、tty、tv）；</li>
+        <li>and 被称为关键字，其他关键字还包括 not（排除某种设备），only（限定某种设备）；</li>
+        <li>（min-width: 400px）就是媒体特性，其被放置在一对圆括号中。完整的特性可以查看<a href="http://www.w3.org/TR/css3-mediaqueries/#media1" target="_blank">相关的Media features部分</a>；</li>
     </ul>
 </p>
 
