--- a/_posts/2014-05-12-javascript-amazing1.html
+++ b/_posts/2014-05-12-javascript-amazing1.html
@@ -157,6 +157,9 @@ loop();
 
 
 
+<p class="pege_tail">参考<a href="http://www.cnblogs.com/skylar/p/3986087.html" target="_blank">js作用域问题一步步透彻理解</a></p>
+
+
 
 
 
