add rubik style file

--- a/rubik.html
+++ b/rubik.html
@@ -9,6 +9,8 @@
         <title>小魔方</title>
         <link rel="icon" href="/img/favicon.ico" type="image/x-icon"/>
         <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon"/>
+        <link rel="stylesheet" type="text/css" href="/js/rubiks/css/cube.css">
+        <link rel="stylesheet" type="text/css" href="/js/rubiks/css/doodle.css">
         <style type="text/css">
             img[src="http://eiv.baidu.com/hmt/icon/21.gif"] {display: none;}
         </style>
