add rubik page in resume pages

--- a/resume.html
+++ b/resume.html
@@ -176,15 +176,6 @@
 	        			一个类似游戏盒子的手机应用，初期技术选型阶段选用Phonegap+Jquerymobile+Backbone 完成所有前端基础性页面并且和后端进行数据交互，做完发现前端列表数据很多时候滑动效果特别卡顿，后来就用 Phonegap + Ratchet + Backbone重构所有前端页面，最终完成该项目。
 	        		</p>
 	        	</li>
-	            <!-- <li>
-	                <p><a target="_blank" href="http://3g.163.com/ntes/special/00340BF8/hdlb.html">网易新闻客户端活动广场</a></p>
-	                <p class="itemIntro">简介：一个网易新闻客户端native app的内嵌wap页，使用hybrid开发形式，提供一个活动入口页面。主要使用Zepto,html5,css3等技术开发。</p>
-	            </li>
-	            
-	            <li>
-	                <p>pad版支付宝</p>
-	                <p>简介：主要承担html和css编写工作，参与部分开发联调。运用技术主要有：html5，css3，原生js和jQuery。</p>
-	            </li> -->
 	            <li>
 	        		<span><a target="_blank" href="http://www.52retail.com">www.52retail.com</a></span>
 	        		<p class="itemIntro">一个SNS网站兼具E-SHOP功能，五天内完成所有前端基础性页面并且编写登录表单，忘记密码等等表单的验证以及E-SHOP相关的交互效果所需的Javascript脚本，项目时间紧急，但是最终保质保量的完成了项目。</p>
@@ -204,6 +195,10 @@
 	            <li>
 	            	<span><a href="http://www.ga-it.cn/static/gamelist/index.html" target="_blank">GT爱游戏网页版</a></span>
 	        		<p class="itemIntro">简介：一个在线的html5游戏列表，点击可以玩各种html5游戏，适配PC端和移动端。运用技术主要有：html5，css3。</p>
+	            </li>
+	           	<li>
+	                <span><a target="_blank" href="http://www.oc35.com/rubik.html">魔方HTML5小游戏</a></span>
+	                <p class="itemIntro">简介：一个魔方HTML5小游戏。主要使用Canvas,html5,css3等技术开发。</p>
 	            </li>
 	        </ul>
 	    </div>
