modified javascript classic blog

--- a/_posts/2014-09-24-javascript-classic.html
+++ b/_posts/2014-09-24-javascript-classic.html
@@ -34,7 +34,7 @@ console.log(b);   // ReferenceError  =>>  b is not defined
 
 
 
-<h4>经典二：创建“原生”（native）方法</h4>
+<h4>经典二：创建“原生”（native）方法 —— 有关Prototype原型</h4>
 
 <p>给字符串对象定义一个repeatify功能。当传入一个整数n时，它会返回重复n次字符串的结果。例如：</p>
 
@@ -69,7 +69,7 @@ String.prototype.repeatify = String.prototype.repeatify || function(times) {/* c
 
 
 
-<h4>经典三：声明提升（Hoisting）</h4>
+<h4>经典三：声明提升（Hoisting）—— 有关作用域</h4>
 
 <p>执行这段代码，输出什么结果。	</p>
 
@@ -114,7 +114,7 @@ test();
 
 
 
-<h4>经典四：this在JavaScript中如何工作的</h4>
+<h4>经典四：this在JavaScript中如何工作的 —— 有关this的值</h4>
 
 <p>下面的代码会输出什么结果？给出你的答案。</p>
 
@@ -149,7 +149,7 @@ console.log(test());
 
 
 
-<h4>经典五：call() 和 apply()</h4>
+<h4>经典五：call() 和 apply() —— 有关object对象的调用</h4>
 
 <p>现在让你解决前一个问题，使最后的console.log() 打印 Aurelio De Rosa。</p>
 
