add function blog

--- a/_posts/2013-01-12-interview.html
+++ b/_posts/2013-01-12-interview.html
@@ -1157,5 +1157,24 @@ alert(d.b);
 
 
 
+<!-- 
+
+
+
+<p class="pege_tail">参考<a href="http://www.w3cfuns.com/article-5599657-1-1.html" target="_blank">2014腾讯面试记</a></p>
+<p>参考<a href="http://www.cnblogs.com/52cik/p/js-question-lg.html" target="_blank">乐视+金山+360面试之行</a></p>
+<p>参考<a href="http://www.cnblogs.com/lvdabao/p/3660707.html" target="_blank">【拉勾专场】抛弃简历！让代码说话！</a></p>
+<p>参考<a href="http://www.cnblogs.com/allenxing/p/3724382.html" target="_blank">前端面试的问题的总结</a></p>
+<p>参考<a href="http://www.cnblogs.com/lvdabao/p/3660707.html" target="_blank">乐视+金山+360面试之行</a></p>
+<p>参考<a href="http://mianshiti.diandian.com/" target="_blank">Web开发笔试面试题</a></p>
+<p>参考<a href="http://www.html-js.com/article/1743" target="_blank">2014年最新前端开发面试题</a></p>
+<p>参考<a href="https://github.com/markyun/My-blog/tree/master/Front-end-Developer-Questions" target="_blank">Web开发笔试面试题</a></p>
+<p>参考<a href="https://github.com/fex-team/interview-questions" target="_blank">Web开发笔试面试题</a></p>
+
+
+
+ -->
+
+
 
 
