--- a/_posts/2013-08-24-javascript-function.html
+++ b/_posts/2013-08-24-javascript-function.html
@@ -1,50 +1,197 @@
 ---
 layout: default_post
-title : Javascript函数、事件原理，继承和闭包
+title : Javascript函数详解
 ---
 
 
 
-<h3>Javascript函数、事件原理，继承和闭包</h3>
+<h3>Javascript函数</h3>
 
 
 
 
-<h3>Javascript的匿名函数</h3>
+<h4>函数的定义</h4>
 
+<p>函数对任何语言来讲都是一个核心的概念，通过函数可以封装任意多条语句，而且可以在<strong>任何地方、任何时候调用执行</strong>。</p>
+<p>ECMAScript中规定：使用function关键字来声明，后面跟一组参数以及函数体。</p>
+<p>一般情况下Javascript创建一个函数一般有以下两种方式：</p>
+<h5>函数声明</h5>
 
+	{% highlight javascript %}
+function functionName(arg1,arg2){
+   //函数体
+}
+	{% endhighlight %}
 
-<p>先来看看Javascript创建一个函数一般有以下两种方式：</p>
-<h4>函数声明</h4>
+<h5>函数表达式</h5>
 
-	{% highlight html %}
-function functionName(arg0,arg1){
+	{% highlight javascript %}
+var functionName = function(arg1,arg2){
    //函数体
 }
 	{% endhighlight %}
 
 
+<p>函数声明和函数表达式两者的主要区别是：</p>
+<ul>
+    <li>函数声明会在代码执行前被加载到作用域（全局作用域）中；—— 有函数声明提升</li>
+    <li>函数表达式是在代码执行到那一行的时候才会有定义；—— 没有函数声明提升</li>
+</ul>
 
-<h4>函数表达式</h4>
+<p>代码来解释：如果是函数声明的情况下</p>
 
-	{% highlight html %}
-var functionName = function(arg0,arg1){
-   //函数体
-}
-	{% endhighlight %}
+    {% highlight javascript %}
+alert(add(20,30));      // 50
+function add(num1,num2){
+   return num1 + num2;
+};
+    {% endhighlight %}
+
+<p>以上代码正常运行，会打印出50。因为在代码开始执行之前，解析器（javascriptCore）就已经通过函数声明提升（function declaration hoisting）的过程，读取并将函数声明添加到执行环境中。所以即使声明函数的代码在调用它的代码的后面，当代码开始执行之前，解析器早已把函数声明的代码提升到了作用域顶部。</p>
+
+<p>如果是函数表达式的情况下：</p>
+
+    {% highlight javascript %}
+alert(add(20,30));      // Uncaught TypeError: undefined is not a function 
+var add = function(num1,num2){
+   return num1 + num2;
+};
+    {% endhighlight %}
+
+<p>以上代码运行会出现错误： <img src="/img/typeError.jpg" alt="类型错误"></p>
+<p>原因在于：函数表达式中的函数位于一个初始化的语句中，而不是一个函数声明。在执行到函数所在的语句（定义）之前，变量add中不会保存有多函数的引用。</p>
+<p>另一个区别是函数声明会给函数指定一个名字，而函数表达式则创建一个匿名函数，然后将这个函数赋给一个变量。</p>
 
 
-<p>函数声明和函数表达式之间的主要区别是前者会在代码执行前被加载到作用域中，而后者是在代码执行到那一行的时候才会有定义。另一个区别是函数声明会给函数指定一个名字，而函数表达式则创建一个匿名函数，然后将这个函数赋给一个变量。</p>
 
 
 
 
 
+<h4>函数的调用</h4>
+
+<p>函数通过函数名来调用，后面加上一对圆括号和参数（如果有参数的话）。</p>
+
+
+
+
+<h4>函数的返回值</h4>
+
+<p>ECMAScript中规定：函数在定义时不必指定是否有返回值。实际上，任何函数在任何时候都可以通过return语句后面加上要返回的值来实现返回值。</p>
+
+<p>看刚才的例子：</p>
+
+    {% highlight javascript %}
+alert(add(20,30));      // 50
+function add(num1,num2){
+   return num1 + num2;
+};
+    {% endhighlight %}
+
+<p>这个函数add()的作用就是把两个值加起来返回一个结果。这个函数会在return语句之后停止并立即退出，因此位于return语句之后的代码将永远都不会执行。</p>
+
+
+    {% highlight javascript %}
+function add(num1,num2){
+   return num1 + num2;
+   alert("I'm Superman!");   // 永远都不会执行
+};
+var result = add(30,50);
+alert(result);   // 80 
+    {% endhighlight %}
+
+<p>当然，一个函数可以包含多个return语句，比如下面这个例子；</p>
+
+    {% highlight javascript %}
+function whichBigger(num1,num2){
+    if(num1 < num2){
+        return num2 - num1;
+    } else {
+        return num1 - num2;
+    }
+};
+var result1 = whichBigger(20,30);
+var result2 = whichBigger(50,30);
+alert(result1);     // 10
+alert(result2);     // 20
+    {% endhighlight %}
+
+
+<p>这个函数whichBigger()用于计算两个数值的差，如果第一个数比第二个数小，则用第二个数减第一个数；否则，用第一个数减第一个数，并分别返回。</p>
+
+<p>最后，return语句页可以不带有任何返回值，这种情况下，函数在停止执行后，将返回undefined值。</p>
+
+    {% highlight javascript %}
+
+function sayName(name){
+    return;
+    alert("my name is" + name + "!");    // 永远不会调用
+};
+var result = sayName("bobby");
+alert(result);     // undefined
+    {% endhighlight %}
+
+<p>函数return不带返回值，其实会有一个undifined返回值，这也是javascript前端面试经常容易出题的考察点。</p>
+
+
+
+
+
+<h4>函数的参数、和参数传递</h4>
+
+
+
+
+
+
+
+
+<h4>函数没有重载</h4>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- 
 
 <h4>什么是事件？</h4>
 <p>事件(Event)是JavaScript应用跳动的心脏 ，也是把所有东西粘在一起的胶水。当我们与浏览器中 Web 页面进行某些类型的交互时，事件就发生了。事件可能是用户在某些内容上的点击、鼠标经过某个特定元素或按下键盘上的某些按键。事件还可能是 Web 浏览器中发生的事情，比如说某个 Web 页面加载完成，或者是用户滚动窗口或改变窗口大小。</p>
 <p>通过使用 JavaScript ，你可以监听特定事件的发生，并规定让某些事件发生以对这些事件做出响应。</p>
 
+ -->
 
 
 
@@ -52,8 +199,7 @@ var functionName = function(arg0,arg1){
 
 
 
-
-
+<!-- 
 
 
 <h3>Javascript闭包</h3>
@@ -123,5 +269,5 @@ foo.get_secret (); // 得到 'a new secret'
 <p>参考<a href="http://www.cnblogs.com/binyong/articles/1750263.html" target="_blank">理解Javascript的事件处理机制</a></p>
 
 
-
+ -->
 
