modified javascript function blog

--- a/_posts/2013-08-24-javascript-function.html
+++ b/_posts/2013-08-24-javascript-function.html
@@ -164,7 +164,10 @@ alert(result);     // undefined
 
 
 
-<!-- <h4>函数没有重载</h4> -->
+<h4>函数没有重载</h4>
+
+<p>在一些其他语言比如Java语言中，可以为一个函数编写两个定义，只要这两个定义的签名（接受的参数的类型和数量）不同即可。</p>
+<p>但是ECMAScript规定：Javascript中的函数没有签名，因为<strong>其参数是由包含零或多个值的数组来表示的。</strong>而没有函数签名，真正的重载是不可能做到的。</p>
 
 
 
