modified javascript function blog

--- a/_posts/2013-08-24-javascript-function.html
+++ b/_posts/2013-08-24-javascript-function.html
@@ -248,9 +248,30 @@ alert(add("hello ,", " world !"));    // hello , world !undefined
 
 <h4>函数值的传递</h4>
 <p>在Javascript中，函数名是指向函数对象的指针，其本身就是变量，而函数也可以作为返回值来使用。也就是说，不仅可以像传递参数一样把一个函数传递给另外一个函数，而且可以将一个函数作为另外一个函数的结果返回。</p>
+<p>但是：JS 中参数的传递方式只有一种：<strong>即所有参数都是按值传递</strong>。也就是说数字、字符串等按值传递；数组、对象等按也是按值传递。（虽然数组、对象等的按值传递与数字、字符串还是有所不同的。）</p>
 
+    {% highlight javascript %}
+var v1 = [1,2,3];
+var v2 = {};
+var v3 = {a:123};
+function fn1(v1, v2, v3){
+    v1 = [1];
+    v2 = [2];
+    v3 = {a:3}
+}
 
+fn1(v1, v2, v3);
+alert(v1);     // [1,2,3]
+alert(v2);     // [object Object]
+alert(v3.a);   // 123
+    {% endhighlight %}
 
+<p>观察以上代码，可以看出：v1、v2、v3 都没有被改变，v1 仍然是值为[1,2,3]的数组，v2是空白的对象，v3是具有值为3的属性a的对象。因为数组、对象等按值传递，是指变量地址的值。</p>
+<p>前面说过，虽然函数的参数都是按值传递，但是数组、对象等引用类型的按值传递与数字、字符串等基本类型的按值传递不同点在于：</p>
+<ul>
+    <li>数字、字符串是把值直接复制进去来实现的；</li>
+    <li>数组、对象是把变量地址复制进去来实现的；</li>
+</ul>
 
 
 
