remove webkit study blog and add javascript variable blog

--- a/_posts/2013-08-24-javascript-function.html
+++ b/_posts/2013-08-24-javascript-function.html
@@ -1,6 +1,6 @@
 ---
 layout: default_post
-title : Javascript函数详解
+title : Javascript基础之——函数详解
 ---
 
 
@@ -257,7 +257,7 @@ var v3 = {a:123};
 function fn1(v1, v2, v3){
     v1 = [1];
     v2 = [2];
-    v3 = {a:3}
+    v3 = {a:3};
 }
 
 fn1(v1, v2, v3);
@@ -266,12 +266,67 @@ alert(v2);     // [object Object]
 alert(v3.a);   // 123
     {% endhighlight %}
 
-<p>观察以上代码，可以看出：v1、v2、v3 都没有被改变，v1 仍然是值为[1,2,3]的数组，v2是空白的对象，v3是具有值为3的属性a的对象。因为数组、对象等按值传递，是指变量地址的值。</p>
+<p>观察以上代码，可以看出：v1、v2、v3 都没有被改变，v1 仍然是值为[1,2,3]的数组，v2是空白的对象，v3是具有值为3的属性a的对象。因为数组、对象等按值传递，是指变量地址的值。在函数内部我们为 v1、v2、v3 赋了值，也就是说我们把v1、v2、v3的指针的指向改变了，指向了新的数组和对象。这样内部的 v1、v2、v3 和外部的 v1、v2、v3 的联系就完全断了。下面代码可以印证：</p>
+
+    {% highlight javascript %}
+var v1 = [1,2,3];
+var v2 = {};
+var v3 = {a:123};
+function fn1(v1, v2, v3){
+    v1 = [1];
+    v2 = [2];
+    v3 = {a:3};
+    alert(v1);     // [1]
+    alert(v2);     // [2]
+    alert(v3.a);   // 3
+}
+
+fn1(v1, v2, v3);
+alert(v1);     // [1,2,3]
+alert(v2);     // [object Object]
+alert(v3.a);   // 123
+    {% endhighlight %}
+
+<p>而如果我们在函数fn1里面，没有为v1、v2、v3赋新值，而是直接操作它的话：</p>
+
+    {% highlight javascript %}
+var v1 = [1,2,3];
+var v2 = {};
+var v3 = {a:123};
+function foo(v1, v2, v3)
+{
+    v1.push(1);
+    v2.a = 2;
+    v3.a = 33;
+}
+
+foo(v1, v2, v3);
+alert(v1);     // [1,2,3,1]
+alert(v2.a);   // 2
+alert(v3.a);   // 33
+    {% endhighlight %}
+
+<p>可以看出：在函数fn1里面，没有为v1、v2、v3赋新值，而是直接操作它，那么，它操作到的，仍然是和外面的 v1、v2、v3 指向的同一块数组或对象。</p>
+
 <p>前面说过，虽然函数的参数都是按值传递，但是数组、对象等引用类型的按值传递与数字、字符串等基本类型的按值传递不同点在于：</p>
 <ul>
     <li>数字、字符串是把值直接复制进去来实现的；</li>
     <li>数组、对象是把变量地址复制进去来实现的；</li>
 </ul>
+
+<p>那么，引用类型的值是什么呢？</p>
+<p>当一个变量向另一个变量复制引用类型的值时，<strong>会将存储在栈中的值（栈中存放的值是对应堆中的引用地址）复制一份到为新变量分配的空间中。</strong>引用类型的值实际上是对其引用对象的一个指针。</p>
+<p></p>
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -315,12 +370,7 @@ alert(result);     // 700
 
 
 
-
-
-
-
-
-
+<!-- <p>参考<a href="http://www.cnblogs.com/youxin/p/3354903.html" target="_blank">JS 中没有按地址（引用）传递，只有按值传递</a></p> -->
 
 
 
